@@ -1,3 +1,6 @@
+* Dialer: monitor additional instances of Uniqueid that can be associated with
+  a given call and might hold additional call failure information in their
+  Hangup events.
 * Reports Break: complete rewrite. Replace inefficient time lookup, and fix
   no-data issue on CSV export, as well as HTML tags in CSV export. Should fix
   Elastix bug #324. 
